Fixed styling on profile pages. Cards now have a border and the alignment is fixed as well

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -90,3 +90,5 @@ body {
   border-width: 1px;
   border-color: #696969;
 }
+
+.border-primary { border: 1px solid lightgrey; }
